# supersecure

./: LICENSE  README.md  pyproject.toml  update_config.py
src/securegenomics/: __init__.py  auth.py  cli.py  config.py  crypto.py  crypto_context.py  data.py  github.py  local.py  project.py  protocol.py  validation.py
tests/: test_cli.py
